--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
               Java, Css and Python.
             </p>
           </div>
-          <div class="col-md-6 mb-3">
-            I am also a gamer, I am playing PUBG Mobile and Mobile Legend. In Telkom University I am entering some kind of Student Activity Units such as: Keluarga Mahasiswa Katolik(KMK) and Central Computer Improvement(CCI)
-          </div>
+          <div class="col-md-6 mb-3">, I am playing PUBG Mobile and Mobile Legend. In Telkom University I am entering some kind of Student Activity Units such as: Keluarga Mahasiswa Katolik(KMK) and Central Computer Improvement(CCI)</div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
