--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <section class="jumbotron text-center">
       <img src="img/naevaweb-202408251442.jpg" alt="Nazario Valente" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Nazario Valente</h1>
+      <h1 class="display-4 fw-bold">Nazario Valente</h1>
       <p class="lead">Informatic Student | Gamer | Content Creator</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
